# OffroadSimBench

./: .gitignore  AGENT.md  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: README.md  training_configs.json
configs/scenarios/: beamng_orfd_eval.yaml  beamng_visible_autodrive.yaml  forest_trail_001.yaml
configs/tasks/: beamng_johnson_valley_nav_001.yaml  beamng_johnson_valley_nav_alt.yaml  beamng_johnson_valley_nav_test.yaml  beamng_region_nav_001.yaml
configs/trainers/: tiny_depth.yaml  tiny_world_model.yaml  (+1 more)
dashboard/: README.md  __init__.py
desktop_app/: __init__.py  main.py  qt_main.py  services.py
docs/: README.md  beamng_backend.md  dataset_to_beamng_map.md  desktop_gui.md  le_wm_integration.md  phase1_acceptance_report.md  phase2_acceptance_report.md  phase2_demo_plan.md  phase3_acceptance_report.md  phase3_development_plan.md  phase4_acceptance_report.md  phase4_development_plan.md  trainer_protocol.md  training_jobs.md  ue5_backend.md
examples/: README.md  check_backends.py  check_beamng_runtime.py  inspect_dataset.py  replay_episode.py  run_beamng_world_model.py  run_dataset_replay.py  run_gym_demo.py  run_gymnasium_env.py  run_mock_ue5_backend.py  run_world_model_agent.py
offroad_sim/: __init__.py  cli.py
scripts/: README.md  convert_lewm_hf_checkpoint.py  create_mock_dataset.py  create_mock_orfd_dataset.py  demo_acceptance.py  export_episodes_hdf5.py  export_lewm_hdf5.py  infer_tiny_depth.py  infer_world_model.py  phase2_acceptance.ps1  phase3_acceptance.ps1  phase4_visible_beamng_acceptance.ps1  run_beamng_lewm_closed_loop.py  run_beamng_visible_demo.py  run_region_navigation_loop.py  run_region_self_supervised_world_model.py  run_region_world_model_evaluation.py  train_lewm_cost_model.py  train_tiny_depth.py  train_world_model.py
tests/: test_agents.py  test_algorithm_adapters.py  test_backend_registry.py  test_beamng_backend_import.py  test_beamng_backend_visible.py  test_beamng_lewm_closed_loop.py  test_beamng_visible_config.py  test_cli.py  test_config_loading.py  test_core_interfaces.py  test_dashboard_backend.py  test_dataset_analysis.py  test_dataset_replay_backend.py  test_demo_acceptance_script.py  test_desktop_layout.py  test_desktop_services.py  test_desktop_visible_demo.py  test_episode_recorder.py  test_experiment_management.py  test_gym_heightmap_backend.py  test_gymnasium_wrapper.py  test_import.py  test_inference_workbench.py  test_lewm_checkpoint.py  test_lewm_cost_model.py  test_manifest_dataset_adapter.py  test_metrics.py  test_navigation_region_task.py  test_orfd_adapter.py  test_planning.py  test_region_cost.py  test_region_navigation_loop.py  test_region_self_supervised_world_model.py  test_route_world_model_agent.py  test_runner_lifecycle.py  test_tiny_depth_trainer.py  test_trainer_protocol.py  test_training_jobs.py  test_training_manifest_services.py  test_training_metrics.py  (+3 more)
(+108 files in other folders)
