[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offroad-sim-bench"
version = "0.1.0"
description = "Local off-road autonomous driving simulation and world-model evaluation platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "gymnasium>=0.29",
  "rich>=13.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
gui = [
  "PySide6>=6.7",
]
beamng = [
  "beamngpy",
]
lewm = [
  "stable-worldmodel>=0.0.6",
]
lewm-train = [
  "stable-worldmodel[train,env]>=0.0.6",
]

[project.scripts]
offroad-sim = "offroad_sim.cli:main"
offroad-sim-gui = "desktop_app.main:main"

[tool.setuptools.packages.find]
include = ["offroad_sim*", "dashboard*", "desktop_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
